# Parallel-PCA

./: CMakeLists.txt  README.md  README_old.md
data/: generate_data.py
include/: jacobi.h  matrix.h  pca.h  utils.h
results/: benchmarks.csv  eig_par_mpi_jacobi_k10_rank00.csv  eig_par_mpi_jacobi_k10_rank01.csv  eig_par_mpi_jacobi_k10_rank02.csv  eig_par_mpi_jacobi_k10_rank03.csv  eig_par_mpi_jacobi_k20_rank00.csv  eig_par_mpi_jacobi_k20_rank01.csv  eig_par_mpi_jacobi_k20_rank02.csv  eig_par_mpi_jacobi_k20_rank03.csv  eig_par_mpi_jacobi_k40_rank00.csv  eig_par_mpi_jacobi_k40_rank01.csv  eig_par_mpi_jacobi_k40_rank02.csv  eig_par_mpi_jacobi_k40_rank03.csv  eig_par_mpi_jacobi_k5_rank00.csv  eig_par_mpi_jacobi_k5_rank01.csv  eig_par_mpi_jacobi_k5_rank02.csv  eig_par_mpi_jacobi_k5_rank03.csv  eig_par_rank00.csv  eig_par_rank01.csv  eig_par_rank02.csv  eig_par_rank03.csv  eig_par_root_omp_jacobi_k10_rank00.csv  eig_par_root_omp_jacobi_k10_rank01.csv  eig_par_root_omp_jacobi_k10_rank02.csv  eig_par_root_omp_jacobi_k10_rank03.csv  eig_par_root_omp_jacobi_k20_rank00.csv  eig_par_root_omp_jacobi_k20_rank01.csv  eig_par_root_omp_jacobi_k20_rank02.csv  eig_par_root_omp_jacobi_k20_rank03.csv  eig_par_root_omp_jacobi_k40_rank00.csv  eig_par_root_omp_jacobi_k40_rank01.csv  eig_par_root_omp_jacobi_k40_rank02.csv  eig_par_root_omp_jacobi_k40_rank03.csv  eig_par_root_omp_jacobi_k5_rank00.csv  eig_par_root_omp_jacobi_k5_rank01.csv  eig_par_root_omp_jacobi_k5_rank02.csv  eig_par_root_omp_jacobi_k5_rank03.csv  eig_par_root_serial_jacobi_k10_rank00.csv  eig_par_root_serial_jacobi_k10_rank01.csv  eig_par_root_serial_jacobi_k10_rank02.csv  (+44 more)
scripts/: plot.py  run_benchmarks.sh
src/benchmark/: eig_par_pro.c  (+4 more)
(+5 files in other folders)
